[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui/Options.gd" type="Script" id=1]
[ext_resource path="res://art/Underwater Mountains.png" type="Texture" id=2]
[ext_resource path="res://gui/nintendoctrlr_SUBRESCUE.png" type="Texture" id=3]
[ext_resource path="res://SFX/radakan - old moltara underwater ruins_0.ogg" type="AudioStream" id=4]
[ext_resource path="res://fonts/majorleaguefont.tres" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/SgtJhonO-JRW07.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 12
outline_color = Color( 0.00392157, 0.00784314, 0.0196078, 0.901961 )
font_data = ExtResource( 6 )

[node name="Options" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
light_mask = 2
margin_right = 1020.0
margin_bottom = 600.0
rect_min_size = Vector2( 1020, 600 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="GameTitle" type="RichTextLabel" parent="TextureRect"]
self_modulate = Color( 0.898039, 0.890196, 0.890196, 1 )
margin_left = 7.0
margin_top = -13.0
margin_right = 128.0
margin_bottom = 22.0
rect_scale = Vector2( 3, 2 )
size_flags_horizontal = 2
size_flags_vertical = 2
bbcode_enabled = true
bbcode_text = "
[wave amp=20 freq=2][b][color=green]Submarine Rescue[/color][/b][/wave]"
meta_underlined = false
text = "
Submarine Rescue"
scroll_active = false

[node name="controls" type="TextureButton" parent="."]
light_mask = 2
anchor_left = 0.474
anchor_top = 0.903
anchor_right = 0.601
anchor_bottom = 0.958
margin_left = -0.376038
margin_top = 0.19989
margin_right = -0.424011
margin_bottom = 7.19995
rect_min_size = Vector2( 130, 40 )
focus_neighbour_left = NodePath("../about")
focus_neighbour_right = NodePath("../back")
focus_next = NodePath("../back")
focus_previous = NodePath("../about")
focus_mode = 1
size_flags_horizontal = 4
action_mode = 0
enabled_focus_mode = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect2" type="ColorRect" parent="controls"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.67451, 0.666667, 0.666667, 1 )

[node name="Label" type="Label" parent="controls"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -5.00003
margin_bottom = -3.00006
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Controls"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="gamecontrols" type="TextureRect" parent="controls"]
visible = false
anchor_left = -3.631
anchor_top = -11.85
anchor_right = 3.985
anchor_bottom = -0.55
margin_left = 0.0301514
margin_top = -18.9993
margin_right = -0.0501099
margin_bottom = 19.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="back" type="TextureButton" parent="."]
light_mask = 2
anchor_left = 0.797
anchor_top = 0.898
anchor_right = 0.924
anchor_bottom = 0.958
margin_left = -0.128174
margin_top = 0.200012
margin_right = -0.176025
margin_bottom = 4.20007
rect_min_size = Vector2( 130, 40 )
focus_neighbour_left = NodePath("../controls")
focus_next = NodePath("../about")
focus_previous = NodePath("../controls")
focus_mode = 1
size_flags_horizontal = 4
action_mode = 0
enabled_focus_mode = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect2" type="ColorRect" parent="back"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.67451, 0.666667, 0.666667, 1 )

[node name="Label" type="Label" parent="back"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -5.00018
margin_bottom = -3.00006
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Main Menu"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="about" type="TextureButton" parent="."]
anchor_left = 0.147
anchor_top = 0.895
anchor_right = 0.274
anchor_bottom = 0.962
margin_left = 0.472
margin_right = 0.423981
margin_bottom = -0.200012
grow_horizontal = 0
grow_vertical = 2
rect_min_size = Vector2( 130, 40 )
focus_neighbour_right = NodePath("../controls")
focus_next = NodePath("../controls")
focus_previous = NodePath("../back")
focus_mode = 1
size_flags_horizontal = 4
action_mode = 0
enabled_focus_mode = 1

[node name="ColorRect" type="ColorRect" parent="about"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 5.0
margin_bottom = 1.0
mouse_filter = 2
color = Color( 0.67451, 0.666667, 0.666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aboutrescue" type="Label" parent="about"]
visible = false
anchor_left = -1.023
anchor_top = -11.95
anchor_right = 6.577
anchor_bottom = -0.1
margin_left = -11.01
margin_top = -4.99997
margin_right = -495.01
margin_bottom = -242.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Unfavourable conditions on the surface would prevent a salvage operation being carried out, as was the case in 1927 with the American submarine S-4 when gale force winds prevented the rescue from commencing in time. Due to the difficulties involved, salvage was abandoned as a means of rescue.
Thinking on submarine rescue changed dramatically in 1939 with the sinking of USS Squalus. During seagoing trials an equipment failure resulted in the flooding of Squalus’ aft torpedo room, engine rooms and crew’s quarters killing 26 of the boat’s 59 crew instantly. Quick work by the remaining submariners prevented further flooding but the boat, now disabled, came to rest 74 metres below the surface. Since 
Squalus was carrying out the exercise in company with her sister ship, USS Sculpin, the DISSUB was quickly located and the alarm raised. What followed was the first true and, to this day, only successful submarine rescue."
autowrap = true

[node name="Label" type="Label" parent="about"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = -3.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "About"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="optionsaudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="about" to="." method="_on_about_pressed"]
